2006-10-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkevent.c (ATTR_GOBJ): fixed a reference count related
	bug of Gdk::EventXXX#set_YYY. Bug #1548806.
	Reported by Markus Koller.

	* src/rbgdkpixbuf.c (pixbuf_s_from_drawable): fixed a memory leak.
	Reported by Andy Chantrill.

2006-10-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkselectiondata.c (gtkselectiondata_get_uris): fixed
	invalid memory free. Bug #1575545.

2006-09-24  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtktextbuffer.c: fixed a typo.

	* src/rbgtktreestore.c: removed a needless check. bug #1557225

2006-08-11  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgtkuimanager.c: Add G_CHILD_ADD and G_CHILD_REMOVE to respectively
	Gtk::UIManager#insert_action_group and Gtk::UIManager#remove_action_group.
	Without these the action_group can be garbage collected while it can still
	be used for callbacks (which causes a nice segv).

2006-08-09  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgtkscrolledwindow.c: Added G_CHILD_ADD to
	Gtk::ScrolledWindow#add_with_viewport

2006-08-09  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgtktable.c: Also do G_CHILD_ADD when using .attach_defaults

2006-08-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkprintunixdialog.c: removed duplicated definition of
	Gtk::PrintCapabilities.
	Reported by Tilman Sauerbeck.

2006-07-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmain.c: Fixed a problem with calling the script with arguments.
	Reported by Guillaume Cottenceau, Kouhei Sutou.

2006-07-10  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: detected whether GtkPrintJob is available or not.
	* src/rbgtkprintjob.c: implemented GtkPrintJob and GtkPrintCapabilities.

	* extconf.rb: detected whether GtkPrinter is available or not.
	* src/rbgtkprinter.c: implemented GtkPrinter and GtkPrintBackend.

2006-07-10  Pascal Terjan  <pterjan@linuxfr.org>

	* src/rbgtktreestore.c: Added Gtk::TreeStore#insert_with_values

2006-07-10  Kouhei Sutou  <kou@cozmixng.org>
